--- a/index.html
+++ b/index.html
@@ -1,143 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/images/logo-minimalista.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="assets/images/logo-minimalista.png"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>LR Contabilidade</title>
 
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/reset.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,500;0,600;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/settings/colors.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/section-about.css">
-    <link rel="stylesheet" href="css/section-services.css">
-    <link rel="stylesheet" href="css/section-contato.css">
-    <link rel="stylesheet" href="css/main-footer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,500;0,600;1,300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/settings/colors.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/section-about.css" />
+    <link rel="stylesheet" href="css/section-services.css" />
+    <link rel="stylesheet" href="css/section-contato.css" />
+    <link rel="stylesheet" href="css/main-footer.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-    <header class="main-header">
+      <header class="main-header">
         <div class="menu">
-            <img class="logo" src="assets/images/logo.png" alt="">
-            <a href="#sobre" class="action-link">Sobre</a>
-            <a href="#servico" class="action-link">Serviços</a>
-            <a href="#contato" class="action-link">Contato</a>
+          <img class="logo" src="assets/images/logo.png" alt="" />
+          <a href="#sobre" class="action-link">Sobre</a>
+          <a href="#servico" class="action-link">Serviços</a>
+          <a href="#contato" class="action-link">Contato</a>
         </div>
-    </header>
-        <section class="banner">
-            <div class="slogan">
-                <h1 class="title">Contabilidade com Precisão, Resultados com Confiança!</h1>
-                <p class="description">Bem-vindo ao seu Escritório de Contabilidade, 
-                    onde transformamos números em oportunidades e tornamos
-                 suas finanças mais simples e lucrativas do que nunca!</p>
-            </div>
-            <div class="apresentation">
-                <img class="logo" src="assets/images/logo.png" alt="Logo lucas rodrigues Contabilidade">
-                <h2 class="main-title">Lucas Rodrigues</h2>
-                <h2 class="sub-title">Contabilidade</h2>
-            </div>
-        </section>
+      </header>
+      <section class="banner">
+        <div class="slogan">
+          <h1 class="title">
+            Contabilidade com Precisão, Resultados com Confiança!
+          </h1>
+          <p class="description">
+            Bem-vindo ao seu Escritório de Contabilidade, onde transformamos
+            números em oportunidades e tornamos suas finanças mais simples e
+            lucrativas do que nunca!
+          </p>
+        </div>
+        <div class="apresentation">
+          <img
+            class="logo"
+            src="assets/images/logo.png"
+            alt="Logo lucas rodrigues Contabilidade"
+          />
+          <h2 class="main-title">Lucas Rodrigues</h2>
+          <h2 class="sub-title">Contabilidade</h2>
+        </div>
+      </section>
     </main>
     <section id="sobre" class="section-about">
-        <div class="container">
-            <div class="card-profile" data-anime="right">
-                <img src="assets/images/Lukas-Rodrigues-removebg-preview.png" alt="">
-            </div> 
-            <div class="sobre" data-anime="left">
-                <h3 class="main-title">Sobre</h3>
-                <div class="description">
-                     conhecido por sua fidelidade aos clientes
-                        e pelo seu histórico de gerenciar grandes negócios de forma
-                         excepcional. Sua paixão pela contabilidade é evidente, e você
-                          está determinado a continuar crescendo sua empresa
-                           e aprimorando sua capacidade de ajudar os clientes
-                           a alcançarem seus objetivos financeiros. Sua reputação
-                            é baseada na integridade e na capacidade de oferecer
-                            serviços confiáveis e valiosos, criando uma base sólida 
-                            de confiança com aqueles que atende. Seu compromisso com
-                             o crescimento contínuo e com a excelência em serviços contábeis
-                              o coloca em uma posição de destaque no mundo dos negócios, onde 
-                              seu trabalho é uma contribuição significativa para o sucesso de 
-                              seus clientes. Com sua determinação e foco, você está pronto para
-                               enfrentar novos desafios e alcançar ainda
-                     mais conquistas em sua jornada profissional.</div>
-            </div>
-            </div>
+      <div class="container">
+        <div class="card-profile" data-anime="right">
+          <img
+            src="assets/images/Lukas-Rodrigues-removebg-preview.png"
+            alt=""
+          />
+        </div>
+        <div class="sobre" data-anime="left">
+          <h3 class="main-title">Sobre</h3>
+          <div class="description">
+            conhecido por sua fidelidade aos clientes e pelo seu histórico de
+            gerenciar grandes negócios de forma excepcional. Sua paixão pela
+            contabilidade é evidente, e você está determinado a continuar
+            crescendo sua empresa e aprimorando sua capacidade de ajudar os
+            clientes a alcançarem seus objetivos financeiros. Sua reputação é
+            baseada na integridade e na capacidade de oferecer serviços
+            confiáveis e valiosos, criando uma base sólida de confiança com
+            aqueles que atende. Seu compromisso com o crescimento contínuo e com
+            a excelência em serviços contábeis o coloca em uma posição de
+            destaque no mundo dos negócios, onde seu trabalho é uma contribuição
+            significativa para o sucesso de seus clientes. Com sua determinação
+            e foco, você está pronto para enfrentar novos desafios e alcançar
+            ainda mais conquistas em sua jornada profissional.
+          </div>
+        </div>
+      </div>
     </section>
     <section id="servico" class="section-services">
-        <h3 class="main-title">Serviços</h3>
-        <div class="container" data-anime="center">
-            <article class="card-service">
-                <i class="fa-solid fa-scale-unbalanced-flip"></i>
-                <span  class="title">Contabilidade Geral</span>
-                <p>
-                     Isso inclui a manutenção de registros 
-                    financeiros detalhados, como lançamentos contábeis, balanços 
-                    patrimoniais e demonstrações de resultados. A contabilidade geral
-                     é fundamental para entender a saúde financeira de uma empresa.
-                </p>
-            </article>
-            <article class="card-service">
-                <i class="fa-solid fa-comments-dollar"></i>
-                <span  class="title">Auditoria</span>
-                <p>Os escritórios de contabilidade podem realizar auditorias
-                    financeiras para verificar a precisão e a conformidade das informações
-                    financeiras de uma empresa. Essa prática é importante para empresas
-                    de capital aberto e outras que têm requisitos regulatórios específicos.</p>
-            </article>
-            <article class="card-service">
-                <i class="fa-solid fa-chart-line"></i>
-                <span  class="title">Orçamento e Previsão</span>
-                <p> Eles ajudam as empresas a criar orçamentos detalhados
-                    e previsões financeiras para planejar o futuro e avaliar o desempenho financeiro
-                    em relação às metas.</p>
-            </article>
-            <article class="card-service">
-                <i class="fa-solid fa-circle-dollar-to-slot"></i>
-                <span  class="title">Preparação de Impostos</span>
-                <p> Os escritórios de contabilidade preparam
-                     e apresentam declarações fiscais para empresas e indivíduos, garantindo 
-                     que todas as obrigações fiscais sejam cumpridas de acordo com as leis fiscais
-                    locais e federais.</p>
-            </article>
-        </div>
+      <h3 class="main-title">Serviços</h3>
+      <div class="container" data-anime="center">
+        <article class="card-service">
+          <i class="fa-solid fa-scale-unbalanced-flip"></i>
+          <span class="title">Contabilidade Geral</span>
+          <p>
+            Isso inclui a manutenção de registros financeiros detalhados, como
+            lançamentos contábeis, balanços patrimoniais e demonstrações de
+            resultados. A contabilidade geral é fundamental para entender a
+            saúde financeira de uma empresa.
+          </p>
+        </article>
+        <article class="card-service">
+          <i class="fa-solid fa-comments-dollar"></i>
+          <span class="title">Auditoria</span>
+          <p>
+            Os escritórios de contabilidade podem realizar auditorias
+            financeiras para verificar a precisão e a conformidade das
+            informações financeiras de uma empresa. Essa prática é importante
+            para empresas de capital aberto e outras que têm requisitos
+            regulatórios específicos.
+          </p>
+        </article>
+        <article class="card-service">
+          <i class="fa-solid fa-chart-line"></i>
+          <span class="title">Orçamento e Previsão</span>
+          <p>
+            Eles ajudam as empresas a criar orçamentos detalhados e previsões
+            financeiras para planejar o futuro e avaliar o desempenho financeiro
+            em relação às metas.
+          </p>
+        </article>
+        <article class="card-service">
+          <i class="fa-solid fa-circle-dollar-to-slot"></i>
+          <span class="title">Preparação de Impostos</span>
+          <p>
+            Os escritórios de contabilidade preparam e apresentam declarações
+            fiscais para empresas e indivíduos, garantindo que todas as
+            obrigações fiscais sejam cumpridas de acordo com as leis fiscais
+            locais e federais.
+          </p>
+        </article>
+      </div>
     </section>
     <section id="contato" class="section-contato">
-        <div class="container">
-            <div class="right">
-                <h3 class="main-title">Entre em contato</h3>
-                <form>
-                   <label for="name">Nome</label>
-                   <input type="text" name="name" placeholder="Digite Seu Nome">
-   
-                   <label for="name">Email</label>
-                   <input type="email" name="name" placeholder="Digite Seu Email">
-   
-                   <label for="mensage">Mensagem</label>
-                   <textarea name="mensage"  cols="30" rows="10">Digite qualquer dúvida ou interesse</textarea>
+      <div class="container">
+        <div class="right">
+          <h3 class="main-title">Entre em contato</h3>
+          <form action="https://api.staticforms.xyz/submit" method="post">
+            <label for="name">Nome</label>
+            <input type="text" name="name" placeholder="Digite Seu Nome" />
 
-                   <button class="main-button">Enviar</button>
-               </form>
-            </div>
-                <img src="assets/images/card-contabil-removebg-preview(1).png" alt="">
+            <label for="name">Email</label>
+            <input type="email" name="name" placeholder="Digite Seu Email" />
+
+            <label for="mensage">Mensagem</label>
+            <textarea name="mensage" cols="30" rows="10">
+Digite qualquer dúvida ou interesse</textarea
+            >
+
+            <button type="submit" class="main-button">Enviar</button>
+          </form>
         </div>
+        <img src="assets/images/card-contabil-removebg-preview(1).png" alt="" />
+      </div>
     </section>
     <footer class="main-footer">
-        <div class="actions">
-            <a href="">Sobre</a>
-            <a href="">Serviços</a>
-            <a href="">Contato</a>
-        </div>
-        <div class="social">
-            <a href="https://www.instagram.com/lucasrodrigues.contabilidade/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://l.instagram.com/?u=https%3A%2F%2Fwa.me%2Fmessage%2FYNMNAYD2LS54N1&e=AT0NMuP_Op4jyomyRNGM8npbj0-Bd8Zbe7WwvCZIvlQqhguzAOWyAFt8bh_yqOQngM0vQkgIPWOFm25is8Onz6QjI2DADavO2aBtwA" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
+      <div class="actions">
+        <a href="">Sobre</a>
+        <a href="">Serviços</a>
+        <a href="">Contato</a>
+      </div>
+      <div class="social">
+        <a
+          href="https://www.instagram.com/lucasrodrigues.contabilidade/"
+          target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://l.instagram.com/?u=https%3A%2F%2Fwa.me%2Fmessage%2FYNMNAYD2LS54N1&e=AT0NMuP_Op4jyomyRNGM8npbj0-Bd8Zbe7WwvCZIvlQqhguzAOWyAFt8bh_yqOQngM0vQkgIPWOFm25is8Onz6QjI2DADavO2aBtwA"
+          target="_blank"
+          ><i class="fa-brands fa-whatsapp"></i
+        ></a>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
