ajust card profile about section

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@ Digite qualquer dúvida ou interesse</textarea
     </section>
     <footer class="main-footer">
       <div class="actions">
-        <a href="">Sobre</a>
-        <a href="">Serviços</a>
-        <a href="">Contato</a>
+        <a href="#sobre">Sobre</a>
+        <a href="#servico">Serviços</a>
+        <a href="#contato">Contato</a>
       </div>
       <div class="social">
         <a
