remove image for contact section

--- a/index.html
+++ b/index.html
@@ -157,14 +157,13 @@ Digite qualquer dúvida ou interesse</textarea
             <button type="submit" class="main-button">Enviar</button>
           </form>
         </div>
-        <img src="assets/images/card-contabil-removebg-preview(1).png" alt="" />
       </div>
     </section>
     <footer class="main-footer">
       <div class="actions">
-        <a href="">Sobre</a>
-        <a href="">Serviços</a>
-        <a href="">Contato</a>
+        <a href="#sobre">Sobre</a>
+        <a href="#servico">Serviços</a>
+        <a href="#contato">Contato</a>
       </div>
       <div class="social">
         <a
