ajust in the about section and banner

--- a/index.html
+++ b/index.html
@@ -78,17 +78,12 @@
           <div class="description">
             conhecido por sua fidelidade aos clientes e pelo seu histórico de
             gerenciar grandes negócios de forma excepcional. Sua paixão pela
-            contabilidade é evidente, e você está determinado a continuar
+            contabilidade é evidente, determinado a continuar
             crescendo sua empresa e aprimorando sua capacidade de ajudar os
-            clientes a alcançarem seus objetivos financeiros. Sua reputação é
-            baseada na integridade e na capacidade de oferecer serviços
-            confiáveis e valiosos, criando uma base sólida de confiança com
-            aqueles que atende. Seu compromisso com o crescimento contínuo e com
+            clientes a alcançarem seus objetivos financeiros. Seu compromisso com o crescimento contínuo e com
             a excelência em serviços contábeis o coloca em uma posição de
             destaque no mundo dos negócios, onde seu trabalho é uma contribuição
-            significativa para o sucesso de seus clientes. Com sua determinação
-            e foco, você está pronto para enfrentar novos desafios e alcançar
-            ainda mais conquistas em sua jornada profissional.
+            significativa para o sucesso de seus clientes.
           </div>
         </div>
       </div>
@@ -150,8 +145,7 @@
             <input type="email" name="name" placeholder="Digite Seu Email" />
 
             <label for="mensage">Mensagem</label>
-            <textarea name="mensage" cols="30" rows="10">
-Digite qualquer dúvida ou interesse</textarea
+            <textarea name="mensage" cols="30" rows="10" placeholder="Digite qualquer dúvida ou interesse"></textarea
             >
 
             <button type="submit" class="main-button">Enviar</button>
